'finished 'Our first app' video

--- a/django.ipynb
+++ b/django.ipynb
@@ -58,13 +58,60 @@
     "#### What are migrations?\n",
     "Migrations are a way of moving a database from one design, a specific set of tables and columns, to a new one. Migrations are reversible, too. The fact that they can be done backwards and forwards is what gives them their name.\n",
     "\n",
-    "## Hello Django\n",
+    "## Hello World in Django\n",
     "Django is a MVC, or Model View Controller Framework.\n",
     "* Django refers to templates as templates and functions that return rendered templates as views.\n",
     "\n",
-    "`HttpReponse` is the class that represents an HTTP response back to the client. The way we used it in this video is the absolute simplest way of generating a response. It's not the most useful tool in the shed, but it's the gateway to all of the other HTTP tools we have.\n",
+    "__`HttpReponse`__ is the class that represents an HTTP response back to the client. The way we used it in this video is the absolute simplest way of generating a response. It's not the most useful tool in the shed, but it's the gateway to all of the other HTTP tools we have.\n",
     "\n",
-    "More information about [`HttpResponse`](https://docs.djangoproject.com/en/1.8/ref/request-response/#httpresponse-objects) and about Django's [view functions](https://docs.djangoproject.com/en/1.8/topics/http/views/)."
+    "More information about [`HttpResponse`](https://docs.djangoproject.com/en/1.8/ref/request-response/#httpresponse-objects) and about Django's [view functions](https://docs.djangoproject.com/en/1.8/topics/http/views/).\n",
+    "\n",
+    "__`url()`__ is a function that constructs a special object that Django uses to join URLs to view functions.\n",
+    "* Django's URLs are created with Regular Expressions.\n",
+    "\n",
+    "#### Instructions:\n",
+    "* Create a views.py file inside the stub directory (the dir inside the dir of the same name).\n",
+    "* Type the following in views.py:\n",
+    "\n",
+    "```python\n",
+    "from django.http import HttpResponse\n",
+    "\n",
+    "def hello_world(request):\n",
+    "    return HttpResponse('Hello World')\n",
+    "```\n",
+    "*The `request` argument is a variable name convention for incoming http requests. It is a requirement for all views.*\n",
+    "\n",
+    "* In urls.py type the following imports below the Django imports:\n",
+    "```python\n",
+    "from . import views\n",
+    "```\n",
+    "*The dot just means import such & such from the current directory.*\n",
+    "\n",
+    "* Add the following to the `urlpatterns` list:\n",
+    "```python\n",
+    "url(r'^$', views.hello_world)\n",
+    "```\n",
+    "The `url` function can actually take up to five arguments:\n",
+    "    * Regular Expression pattern: `r' '`\n",
+    "    * View (function) to send the request to: `<views_py_file>.<view_name>`\n",
+    "    * kwargs for the view\n",
+    "    * name for the route\n",
+    "    * A prefix\n",
+    "* Run `python manage.py runserver`, and check localhost at port 8000 for the 'Hello World' text.\n",
+    "\n",
+    "## Our First App\n",
+    "Django projects contain multiple Django apps. Each app generally encompasses a specific area of functionality.\n",
+    "\n",
+    "__```python manage.py startapp```__ creates the skeleton of an app including the views, models, and tests files.\n",
+    "* Creates a few `__init__.py` files, which mark a directory a python module FYI. They are what allows us to import things from inside those directories.\n",
+    "\n",
+    "__```INSTALLED_APPS```__ is a list of all apps that Django should consider installed and active for the current project. These apps will be used to find templates, tests, models, and migrations.\n",
+    "\n",
+    "__```TIME_ZONE```__ is the setting for what time zone your server is running in. [The docs](https://docs.djangoproject.com/en/1.8/ref/settings/#std:setting-TIME_ZONE) explain a little more and there's a [list of time zones](http://en.wikipedia.org/wiki/List_of_tz_database_time_zones) you can use.\n",
+    "\n",
+    "#### Instructions\n",
+    "* From the root of your project run `python manage.py startapp courses`\n",
+    "* Inside `settings.py` add the string 'courses' to the end of the INSTALLED_APPS list."
    ]
   },
   {
