Finished video on adding records to Django's ORM

--- a/django.ipynb
+++ b/django.ipynb
@@ -70,7 +70,7 @@
     "* Django's URLs are created with Regular Expressions.\n",
     "\n",
     "#### Instructions:\n",
-    "* Create a views.py file inside the stub directory (the dir inside the dir of the same name).\n",
+    "* Create a views.py file inside the stub directory (a dir inside the root dir).\n",
     "* Type the following in views.py:\n",
     "\n",
     "```python\n",
@@ -90,7 +90,13 @@
     "* Add the following to the `urlpatterns` list:\n",
     "```python\n",
     "url(r'^$', views.hello_world)\n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The `url` function can actually take up to five arguments:\n",
     "    * Regular Expression pattern: `r' '`\n",
     "    * View (function) to send the request to: `<views_py_file>.<view_name>`\n",
@@ -111,7 +117,123 @@
     "\n",
     "#### Instructions\n",
     "* From the root of your project run `python manage.py startapp courses`\n",
-    "* Inside `settings.py` add the string 'courses' to the end of the INSTALLED_APPS list."
+    "* Inside `settings.py` add the string 'courses' to the end of the INSTALLED_APPS list.\n",
+    "\n",
+    "## What are models?\n",
+    "Think of model classes as a way for python to make a database table, and the attributes of that class are the table's columns.\n",
+    "\n",
+    "`django.db.models` has most of the model functionality you'll use to create models and their fields.\n",
+    "* `DateTimeField` holds datetime objects.\n",
+    "* `CharField` holds strings.\n",
+    "* `TextField` holds an unspecified amount of text.\n",
+    "* [More](https://docs.djangoproject.com/en/1.8/ref/models/fields/) Django model field types.\n",
+    "\n",
+    "`python manage.py makemigrations [app]` will make the migrations for a specific app.\n",
+    "\n",
+    "`python manage.py migrate [app]` will run the pending migrations for a specific app. If you leave off the app name, any pending migrations for any apps will be run.\n",
+    "\n",
+    "[Here is the list](https://docs.djangoproject.com/en/1.8/ref/django-admin/) of `manage.py` commands.\n",
+    "\n",
+    "#### Instructions:\n",
+    "* Open models.py in Course stub directory.\n",
+    "* Write the following a few lines down from the import statements.\n",
+    "\n",
+    "```python\n",
+    "class Course(models.Model):\n",
+    "    created_at = models.DateTimeField(auto_now_add=True)\n",
+    "    title = models.CharField(max_length=255)\n",
+    "    description = models.TextField()\n",
+    "```\n",
+    "*auto_now_add is essentially using datetime.datetime.now, but with the current time zone set in settings.py*\n",
+    "* Since we've created a new Model class we need to update our table. We need to specify what has changed by running the following command:\n",
+    "\n",
+    "```\n",
+    "$ python manage.py makemigrations course\n",
+    "```\n",
+    "* That command should return with the following:\n",
+    "```\n",
+    "Migrations for 'courses':\n",
+    "  courses/migrations/0001_initial.py\n",
+    "    - Create model Course\n",
+    "```    \n",
+    "If you examine '0001_initial.py', this is what migration syntax looks like for Django.\n",
+    "* To put the migration into practice we run:\n",
+    "\n",
+    "```\n",
+    "$ python manage.py migrate courses\n",
+    "```\n",
+    "* The following should be returned:\n",
+    "```\n",
+    "Operations to perform:\n",
+    "  Apply all migrations: courses\n",
+    "Running migrations:\n",
+    "  Applying courses.0001_initial... OK\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adding Instances (Adding records to the database)\n",
+    "\n",
+    "`python manage.py shell` opens a Python shell with Django's configuration already loaded.\n",
+    "\n",
+    "`Model.save()` will save an in-memory instance of a model to the database.\n",
+    "\n",
+    "`Model.create()` will save an in-memory instance of a model to the database and return the newly-created object.\n",
+    "\n",
+    "`Model.filter(attribute=value)` will get a QuerySet of all instances of the Model that match the attribute values. You can change these values with other comparisons, too, like gte or in. [Find out more here](https://docs.djangoproject.com/en/1.8/topics/db/queries/#retrieving-objects)\n",
+    "\n",
+    "#### Instructions:\n",
+    "* Run `python manage.py shell`\n",
+    "* In the shell type `from courses.models import Course`\n",
+    "    * When we want to query Django's ORM, we have to use the model name (`courses`) and its objects attribute (`models`).\n",
+    "    * Objects points to what's called a model manager, which is a class that controls access to the model's instances and other things.\n",
+    "* In the shell type `Course.objects.all()`\n",
+    "    * Should return an empty QuerySet, `<QuerySet []>`, as there is nothing currently in the database.\n",
+    "* To create a Course Object to be put in the database type the following:\n",
+    "```python\n",
+    ">>> c = Course()\n",
+    ">>> c.title = \"Python Basics\"\n",
+    ">>> c.description = \"Learn the basics of Python\"\n",
+    "```\n",
+    "* To save the Course Object to the database:\n",
+    "```python\n",
+    ">>> c.save()\n",
+    "```\n",
+    "* Lets check out our new entry with:\n",
+    "```python\n",
+    ">>> Course.objects.all()\n",
+    "[<Course: Course object>]\n",
+    "```\n",
+    "* That was a lot of steps to create a single database entry. Lets try doing this in one line:\n",
+    "```python\n",
+    ">>> Course(title=\"Python Collections\", description=\"Learn about list, dict, and tuple\").save()\n",
+    "```\n",
+    "* Now we have two objects in our QuerySet:\n",
+    "```python\n",
+    ">>> Course.objects.all()\n",
+    "<QuerySet [<Course: Course object>, <Course: Course object>]>\n",
+    "```\n",
+    "* Another way to do a one liner for creating database entries:\n",
+    "```python\n",
+    ">>> Course.objects.create(title=\"Object-Oriented-Python\", description=\"Learn about Python's classes\")\n",
+    "<Course: Course object>\n",
+    "```\n",
+    "Did you notice this time we got an Course Object back? This will be helpful in the future.\n",
+    "* Exit the shell and jump into 'models.py'.\n",
+    "* We need to fix how are courses are turned into strings.\n",
+    "    * Write the following beneath the Course Class's attributes:\n",
+    "    ```python\n",
+    "    def __str__(self):\n",
+    "        return self.title\n",
+    "    ```\n",
+    "* Now re-enter the shell and use `Course.objects.all()`:\n",
+    "```python\n",
+    ">>> Course.objects.all()\n",
+    "<QuerySet [<Course: Python Basics>, <Course: Python Collections>, <Course: Object-Oriented-Python>]>\n",
+    "```"
    ]
   },
   {
