just began template section in Django basics

--- a/django.ipynb
+++ b/django.ipynb
@@ -233,6 +233,185 @@
     "```python\n",
     ">>> Course.objects.all()\n",
     "<QuerySet [<Course: Python Basics>, <Course: Python Collections>, <Course: Object-Oriented-Python>]>\n",
+    "```\n",
+    "\n",
+    "## First App View\n",
+    "`include()` allows you to include a list of URLs from another module. It will accept the variable name or a string with a dotted path to the default urlpatterns variable.\n",
+    "```python\n",
+    "include('<dir_name>.<module_name>')\n",
+    "```\n",
+    "\n",
+    "If you don't have `include()` in your `urls.py` (more recent versions of Django have removed it), add it to the `import` line that imports `url`. That line will now look like from `django.conf.urls import url, include`.\n",
+    "\n",
+    "This is the [Comprehensions Workshop](http://teamtreehouse.com/library/python-comprehensions) that's mentioned in the video. Comprehensions are a great way of doing quick work with iterables.\n",
+    "\n",
+    "#### Instructions:\n",
+    "Creating a course list view.\n",
+    "* Open views.py inside the courses folder.\n",
+    "* Add the following import: `from django.http import HttpResponse`\n",
+    "* Below the django imports add: `from .models import Course`\n",
+    "    * The dot before models is referencing the current directory.\n",
+    "* Add the following view function:\n",
+    "```python\n",
+    "def course_list(request):\n",
+    "    courses = Course.objects.all()\n",
+    "    output = ', '.join(courses)\n",
+    "    return HttpResponse(output)\n",
+    "```\n",
+    "* Create a urls.py within the courses directory.\n",
+    "* Add the following to urls.py:\n",
+    "\n",
+    "```python\n",
+    "from django.conf.urls import url\n",
+    "\n",
+    "from . import views\n",
+    "\n",
+    "urlpatterns = [\n",
+    "    url(r'^$', views.course_list)\n",
+    "]\n",
+    "```\n",
+    "*When we add a new view in views.py, we need to add it's route to the urlpatterns List in urls.py*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Now we need to tell Django about our new view and its associated url. We do this by adding the following urlpattern, `url(r'^courses/', include('courses.urls'))` to the urls.py inside the project folder, for us thats 'learning_site'.\n",
+    "\n",
+    "```python\n",
+    "from django.conf.urls import url, include\n",
+    "from django.contrib import admin\n",
+    "\n",
+    "from . import views\n",
+    "\n",
+    "urlpatterns = [\n",
+    "    url(r'^courses/', include('courses.urls')),\n",
+    "    url(r'^admin/', admin.site.urls),\n",
+    "    url(r'^$', views.hello_world)\n",
+    "]\n",
+    "```\n",
+    "*Be sure that `include` has been imported from `django.conf.urls`*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Open views.py inside of courses, and make the following change to the output variable:\n",
+    "```python\n",
+    "output = ', '.join([str(course) for course in courses])\n",
+    "```\n",
+    "*We need to make this change because only string objects can be rendered in the browser. (This is true of both Django and Flask)*\n",
+    "* Now run the server on your local machine with `python manage.py runserver`.\n",
+    "* In the address bar add '/courses/' and press enter.\n",
+    "    * You should now see the list of courses we created earlier."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Django's Admin\n",
+    "`python manage.py createsuperuser` will create a new superuser, or a user that's allowed to log into the admin area with all permissions.\n",
+    "\n",
+    "`admin.site.register(Model)` will register a model with the default admin site, which allows you to edit instances of that model in the admin.\n",
+    "\n",
+    "#### Instructions:\n",
+    "* Be sure server is running.\n",
+    "* In the address bar, add '/admin/' to the root of the site.\n",
+    "    * You should see Django's auto-generated admin panel appear.\n",
+    "* Shutdown the server (Ctrl-C)\n",
+    "* To create an account we use the `python manage.py createsuperuser` command.\n",
+    "    * Run through the prompts to provide a username, email, and password.\n",
+    "    * my credentials were: user: admin, email: example@example.com, password: kennethlove.\n",
+    "* Turn the server back on, and type in the credentials you just provided.\n",
+    "    * Feel free to explore the admin pages\n",
+    "* Now lets add our Courses app to the admin. First open up the 'admin.py' inside of the courses directory.\n",
+    "* Add the following:\n",
+    "\n",
+    "```python\n",
+    "from .models import Course\n",
+    "\n",
+    "admin.site.register(Course)\n",
+    "```\n",
+    "* Save 'admin.py'\n",
+    "* Go to admin Home page, and you should see a Courses Panel.\n",
+    "* Click the Add Button\n",
+    "    * Fill in the title with `Python Testing`and the description with `Learn to test your Python applications with unittests and doctests.`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Templates\n",
+    "App-specific templates are best kept in a structure like `app_name/templates/app_name` because Django looks in app directories for a directory named `templates` and makes those templates automatically available.\n",
+    "\n",
+    "`{{ and }}` are used to mark a variable you want printed out.\n",
+    "\n",
+    "`{% and %}` mark template tags, or special bits of Python that Django's template engine knows how to run. Unlike Jinja2 templates, you can't just run arbitrary Python in a template.\n",
+    "\n",
+    "`render()` turns a request object, a template, and an optional context dictionary into a generated string. [More about render](https://docs.djangoproject.com/en/1.8/topics/http/shortcuts/#render).\n",
+    "\n",
+    "#### Instructions:\n",
+    "* Create a new directory named templates in your 'courses' app folder.\n",
+    "* Within that directory create a directory that is the same as your app, in our case that's 'courses'.\n",
+    "    * Why we do this: So that we have our app specific templates inside this namespaced directory, courses. And then if we need to let people override them, they just make their own template directory named courses. Or, if we want to have templates that are for multiple sections, we could name them different names, whatever.\n",
+    "* Within that directory create a file named course_list.html, open it, and type the following:\n",
+    "```html\n",
+    "{% for course in courses %}\n",
+    "<h2>{{ course.title }}</h2>\n",
+    "{{ course.description }}\n",
+    "{% endfor %}\n",
+    "```\n",
+    "* Open views.py, and change the following:\n",
+    "```python\n",
+    "def course_list(request):\n",
+    "    courses = Course.objects.all()\n",
+    "    return render(request, 'courses/course_list.html', {'courses': courses})\n",
+    "```\n",
+    "*The arguments given to the render function are as follows: request object (the object passed to the function), the template to be rendered, and finally the context dictionary which is how were referencing our courses variable in our template.\n",
+    "* Run the server and check out '/courses/'.\n",
+    "    * You should see a list of courses with thier descriptions.\n",
+    "* Lets create a template for our index page (home page) which exists outside our app. To do this start by creating a directory named 'templates' inside the project's root directory, the first 'learning_site' directory in our case.\n",
+    "* Inside of the 'learning_site' child directory of the root 'learning_site' directory, open settings.py\n",
+    "    * A few notes about the TEMPLATES LIST:\n",
+    "        * Each item TEMPLATES is a dictionary, and each of those dictionaries describes one way of rendering templates.\n",
+    "        * The BACKEND is the template renderer for Django. If you wanted to use Jinja2 templates, you would change BACKEND's value to do that.\n",
+    "        * APP_DIRS, when set true tells Django to look for templates directories is App directories.\n",
+    "        * DIRS allows us to tell Django where else it should look to find template directories.\n",
+    "```python\n",
+    "TEMPLATES = [\n",
+    "    {\n",
+    "        'BACKEND': 'django.template.backends.django.DjangoTemplates', \n",
+    "        'DIRS': [],\n",
+    "        'APP_DIRS': True,\n",
+    "        'OPTIONS': {\n",
+    "            'context_processors': [\n",
+    "                'django.template.context_processors.debug',\n",
+    "                'django.template.context_processors.request',\n",
+    "                'django.contrib.auth.context_processors.auth',\n",
+    "                'django.contrib.messages.context_processors.messages',\n",
+    "            ],\n",
+    "        },\n",
+    "    },\n",
+    "]\n",
+    "```\n",
+    "* Inside of `DIRS` add 'templates'\n",
+    "```python\n",
+    "'DIRS': ['templates',],\n",
+    "```\n",
+    "* Now inside of the templates directory nearest the root of the project, add the file 'home.html'\n",
+    "* Add `<h1>Welcome</h1>` to 'home.html'.\n",
+    "* Open the views.py inside the second 'learning_site' directory, and change the following:\n",
+    "\n",
+    "```python\n",
+    "from django.shortcuts import render\n",
+    "\n",
+    "\n",
+    "def hello_world(requeset):\n",
+    "    return render(request, 'home.html')\n",
     "```"
    ]
   },
