finished django basics templateing section

--- a/django.ipynb
+++ b/django.ipynb
@@ -412,6 +412,239 @@
     "\n",
     "def hello_world(requeset):\n",
     "    return render(request, 'home.html')\n",
+    "```\n",
+    "\n",
+    "## Template Inheritance\n",
+    "`{% extends <template> %}` - Template tag to specify which template the current one should inherit from.\n",
+    "\n",
+    "`{% block <name> %}` and `{% endblock %}` - Template tag pair to mark a section of a parent template as overridable. You can tack on `<name>` at the end of endblock for clarity if you wish.\n",
+    "\n",
+    "#### Instructions:\n",
+    "* Create 'layout.html' inside the templates folder.\n",
+    "* Add the following to 'layout.html'\n",
+    "```html\n",
+    "<!doctype html>\n",
+    "<html>\n",
+    "    <head>\n",
+    "        <title>{% block title %}{% endblock %}</title>\n",
+    "    </head>\n",
+    "    <body>\n",
+    "        {% block content %}{% endblock %}\n",
+    "    </body>\n",
+    "</html>\n",
+    "```\n",
+    "* Add `{% extends \"layout.html\" %}` to the top of 'home.html', & add the following.\n",
+    "\n",
+    "```html\n",
+    "{% block title %}Well Hello There!{% endblock %}\n",
+    "\n",
+    "{% block content %}<h1>Welcome</h1>{% endblock %}\n",
+    "```\n",
+    "* Start app to check if the H1 Welcome is there."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Static Assets\n",
+    "`STATICFILES_DIRS` is a setting for where to find static files. These files will either be served during development or will end up being collected by the `collectstatic` command during deployment.\n",
+    "\n",
+    "`staticfiles_urlpatterns()` is a function that returns the URL patterns for static files based on `DEBUG` and a few other settings. You import it from `django.contrib.staticfiles.urls`.\n",
+    "\n",
+    "`{% load static from staticfiles %}` - The way to import the `{% static %}` tag for use.\n",
+    "\n",
+    "`{% static \"<path/to/asset>\" %}` - How to use the `{% static %}` tag to properly point to a static asset.\n",
+    "\n",
+    "#### Instructions:\n",
+    "* Create an the following folder paths in your root project directory: `/assets/css/`.\n",
+    "* Inside settings.py add the following under `STATIC_URL = '/static/'`.\n",
+    "```python\n",
+    "STATICFILES_DIRS = (\n",
+    "    os.path.join(BASE_DIR, 'assets'),\n",
+    ")\n",
+    "```\n",
+    "* You don't want a live site have python serve static files, but rather whatever server your using like nginx, or Apache. However, for testing purpose you do need to have Django's server serve those files, as well as tell Django where they are, and how.\n",
+    "* Inside of learning_site/learning_site/urls.py add the following:\n",
+    "```python\n",
+    "from django.contrib.staticfiles.urls import staticfiles_urlpatterns\n",
+    "\n",
+    " # place below url_patterns list\n",
+    "urlpatterns += staticfiles_urlpatterns()\n",
+    "```\n",
+    "*staticfiles_urlpatterns() checks to see if we are in debug mode, if we are it creates a static path which is where all are static files are located.*\n",
+    "* Inside layout.html add the following to the top of the file:\n",
+    "```html\n",
+    "{% load static from staticfiles %}\n",
+    "```\n",
+    "* Add this inside the head tags:\n",
+    "```html\n",
+    "<link rel='stylesheet' href=\"{% static 'css/layout.css' %}\">\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step by Step (Adding the steps for each course)\n",
+    "`IntegerField` is a field that holds integers, or whole numbers.\n",
+    "\n",
+    "An *inline* is a smaller form inside of a larger form. The smaller form represents a related record in the database.\n",
+    "\n",
+    "`StackedInline` is an inline where each field takes up the full width of the form. Fields are *stacked*.\n",
+    "\n",
+    "`TabularInline` is an inline where each field is part of a single row for the form.\n",
+    "\n",
+    "[More docs](https://docs.djangoproject.com/en/1.8/ref/contrib/admin/#inlinemodeladmin-objects) on inlines.\n",
+    "\n",
+    "#### Instructions:\n",
+    "*Making a model for step, making a migration for it, then migrate it.\n",
+    "* Add the following to the bottom '/course/models.py':\n",
+    "```python\n",
+    "class Step(models.Model):\n",
+    "    title = models.CharField(max_length=225)\n",
+    "    description = models.TextField()\n",
+    "    order = models.IntegerField(default=0)\n",
+    "    course = models.ForeignKey(Course)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return self.title\n",
+    "```\n",
+    "* In Termial type `python manage.py makemigrations courses`\n",
+    "* In Termial type `python manage.py migrate courses`\n",
+    "* Start-up server.\n",
+    "* In /courses/admin.py change your import statement to `from .models import Course, Step`.\n",
+    "* Add `admin.site.register(Step)` to the file as well.\n",
+    "* Enter the site admin, Add a step.\n",
+    "    * Title: 'What's the deal with strings?'\n",
+    "    * Description: 'Strings are more than just a bunch of letters. Find out why!'\n",
+    "    * Order: 0\n",
+    "    * Course: Python Basics\n",
+    "* Inside of '/courses/admin.py' add/CHANGE the following:\n",
+    "\n",
+    "```python\n",
+    "class StepInline(admin.StackedInline):  # This class by itself does nothing, but it will create \n",
+    "    model = Step                        # the inline with the following code.\n",
+    "\n",
+    "\n",
+    "class CourseAdmin(admin.ModelAdmin):  # This is the admin for handling our courses, this will allow\n",
+    "    inlines = [StepInline,]           # us to specify special custom things.\n",
+    "                                      \n",
+    "\n",
+    "admin.site.register(Course, CourseAdmin)  # Notice that we did not set up a model for CourseAdmin, we're\n",
+    "                                          # doing that here.\n",
+    "admin.site.register(Step)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Add a Detail View\n",
+    "`{% for step in course.step_set.all %}` Notice that we don't use the `()` on `all()`. You don't call functions in Django's template tags, the template engine will handle that for you.\n",
+    "\n",
+    "Also, step_set is automatically generated from the foreign key. Handy!\n",
+    "\n",
+    "`Model.get(attribute=value)` lets you get a single Model instance by a given attribute's value.\n",
+    "\n",
+    "Here is more info on [`prefetch_related`](https://docs.djangoproject.com/en/1.8/ref/models/querysets/#prefetch-related) and [`select_related`](https://docs.djangoproject.com/en/1.8/ref/models/querysets/#select-related). Don't bother too much with these until you're comfortable with Django's ORM.\n",
+    "\n",
+    "#### Instructions:\n",
+    "* In '/course/views.py' add the following:\n",
+    "```python\n",
+    "def course_detail(request, pk):  # Primary Key (pk), is the id of the course in the db.\n",
+    "    course = Course.objects.get(pk=pk)\n",
+    "    return render(request, 'courses/course_detail.html', {'course': course})\n",
+    "```\n",
+    "* In '/courses/urls.py': add the following to the urlpatterns list:\n",
+    "```python\n",
+    "url(r'(?P<pk>\\d+)/$', views.course_detail)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* In 'courses/templates/courses/' create 'course_detail.html'\n",
+    "* Add the following:\n",
+    "\n",
+    "```html\n",
+    "{% extends 'layout.html' %}\n",
+    "\n",
+    "{% block title %}{{ course.title }}{% endblock %}\n",
+    "\n",
+    "{% block content %}\n",
+    "<article>\n",
+    "    <h2>{{ course.title }}</h2>\n",
+    "    {{ course.description }}\n",
+    "\n",
+    "    <section>\n",
+    "            {% for step in course.step_set.all %}\n",
+    "            <h3>{{ step.title }}</h3>\n",
+    "            {{ step.description }}\n",
+    "        {% endfor %}\n",
+    "    </section>\n",
+    "</article>\n",
+    "{% endblock %}\n",
+    "```\n",
+    "* Check to make sure it worked by going to '/courses/1' in the address bar."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ordering and 404s\n",
+    "```\n",
+    "class Meta:\n",
+    "    ordering = ['field1', 'field2']\n",
+    "```\n",
+    "This will cause the model to be ordered by field1, then `field2` if there are any conflicts on `field1` (two instances having the same `field1` value). Finally, they'll be sorted by `id` if a conflict still exists.\n",
+    "\n",
+    "`get_object_or_404(Model, [selectors])` - Gets an object of `Model` by using whatever selection arguments have been given. For example: get_object_or_404(User, username='kennethlove')` would try to get a User with an `username` set to \"kennethlove\". If that User didn't exist, a 404 error would be raised.\n",
+    "\n",
+    "What's the long way? Consider this view:\n",
+    "\n",
+    "```python\n",
+    "from django.http import Http404\n",
+    "\n",
+    "from .models import Course\n",
+    "\n",
+    "def course_detail(request, pk):\n",
+    "    try:\n",
+    "        course = Course.objects.get(pk=pk)\n",
+    "    except Course.DoesNotExist:\n",
+    "        raise Http404()\n",
+    "    else:\n",
+    "        return render(request, 'courses/course_detail.html', {'course': course})\n",
+    "```\n",
+    "It's definitely more work!\n",
+    "\n",
+    "If you want, you can [customize your error views](https://docs.djangoproject.com/en/1.8/topics/http/views/#customizing-error-views).\n",
+    "\n",
+    "#### Instructions:\n",
+    "* Add the following to the 'Step' Model in models.py:\n",
+    "```python \n",
+    "class Meta():\n",
+    "    ordering = ['order', ]  # Order our steps by their order fields, if that fails use thier id in the db.\n",
+    "```\n",
+    "* Add a new Step to Python Basics using the Django Admin:\n",
+    "    * Title: Using the shell\n",
+    "    * Description: What's the deal with strings?\n",
+    "* Set the order of the previous step to '1'.\n",
+    "* Re-Render /courses/1 to check that the new step we created is first.\n",
+    "\n",
+    "\n",
+    "* If Django is routed to an URL that it doesn't have, it throws a '500 Interal Server Error', instead of a '400 Page Not Found Error'. Lets Fix That.\n",
+    "* In /courses/views.py, change the Django imports to `from django.shortcuts import get_object_or_404, render`.\n",
+    "* Change course_detail function as follows:\n",
+    "```python\n",
+    "def course_detail(request, pk):\n",
+    "    course = get_object_or_404(Course, pk=pk)\n",
+    "    return render(request, 'courses/course_detail.html', {'course': course})\n",
     "```"
    ]
   },
